// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`GenerateOrderButton it should faild create on create shipping order to api: sku-over-quantity 1`] = `Promise {}`;

exports[`GenerateOrderButton it should generate order data: order-data-empty 1`] = `
Object {
  "origin": "replenishments",
  "payment_type": "guia",
  "products": "[]",
}
`;

exports[`GenerateOrderButton it should generate order data: order-data-with-one-product 1`] = `
Object {
  "origin": "replenishments",
  "payment_type": "guia",
  "products": "[{\\"sku\\":\\"test-sku\\",\\"price\\":0,\\"name\\":\\"name\\",\\"barcode\\":\\"barcode\\",\\"combination\\":\\"\\",\\"quantity\\":1}]",
}
`;

exports[`GenerateOrderButton it should render the button from status: default 1`] = `
<Fragment>
  <button
    className="btn btn-primary ml-1"
    disabled={false}
    onClick={[Function]}
    type="button"
  >
    Generar guía
  </button>
  <OrderModal
    error_message={Array []}
    isOpen={false}
    onClose={[Function]}
    orderId={-1}
  />
</Fragment>
`;

exports[`GenerateOrderButton it should render the button from status: done 1`] = `
<Fragment>
  <button
    className="btn btn-primary ml-1"
    disabled={true}
    onClick={[Function]}
    type="button"
  >
    Guía enviada
  </button>
  <OrderModal
    error_message={Array []}
    isOpen={false}
    onClose={[Function]}
    orderId={-1}
  />
</Fragment>
`;

exports[`GenerateOrderButton it should render the button from status: loading 1`] = `
<Fragment>
  <button
    className="btn btn-primary ml-1"
    disabled={true}
    onClick={[Function]}
    type="button"
  >
    Generando...
  </button>
  <OrderModal
    error_message={Array []}
    isOpen={false}
    onClose={[Function]}
    orderId={-1}
  />
</Fragment>
`;

exports[`GenerateOrderButton it should validate order stock, and return empty list of sku over quantity: sku-over-quantity-empty 1`] = `Promise {}`;

exports[`GenerateOrderButton it should validate order stock, and return list of sku over quantity: sku-over-quantity 1`] = `Promise {}`;
